# octa-rust

./: Cargo.toml  README.md  notes.json
assets/: notes.json  partitures.json  settings.json
src/: app.rs  lib.rs  main.rs  models.rs  styles.rs  utils.rs  views.rs  widgets.rs
src/message/: enums.rs  mod.rs  states.rs  structs.rs
src/models/: note.rs  partiture.rs  settings.rs
src/styles/: custom_style.rs  mod.rs
src/utils/: frecuency.rs  helper_json.rs  mod.rs  reusable.rs  utils.rs
src/views/: game.rs  main.rs  menu.rs  mod.rs  selection.rs  settings.rs
src/widgets/: all_notes_overlay.rs  grand_staff.rs  intro_and_pause_overlay.rs  intro_overlay.rs  mod.rs  notes.rs  partiture.rs  temporized_intro_overlay.rs
