[package]
name = "OctaRust"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image", "advanced", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Para intercambio de partituras
toml = "0.8"        # Para configuración simple de app
cpal = "0.15"
rustfft = "6.1"